@@ -60,6 +60,11 @@ New features
 
 * LUCENE-5867: Added BooleanSimilarity. (Robert Muir, Adrien Grand)
 
+Bug Fixes
+
+* LUCENE-7547: JapaneseTokenizerFactory was failing to close the
+  dictionary file it opened (Markus via Mike McCandless)
+
 Improvements
 
 * LUCENE-6824: TermAutomatonQuery now rewrites to TermQuery,
